# oxido

./: Cargo.toml  README.md
shaders/: fragment.vert  vertex.vert
src/: app.rs  camera.rs  lib.rs  main.rs  mesh.rs  renderer.rs  scene.rs  shader.rs  util.rs  utils.rs
src/shapes/: cube.rs  mod.rs  pyramid.rs  vertex.rs
