[package]
name = "oxido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
glutin = "0.30.7"
imgui = "0.11.0"
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
log = "0.4.17"
nalgebra-glm = "0.18.0"
simple_logger = "4.1.0"
