[package]
name = "oxido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.32.1"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
winit = {version = "0.30.5", features=["rwh_06"]}


log = "0.4.22"
simple_logger = "5.0.0"
glow = "0.14.1"
anyhow = "1.0.89"
bytemuck = {version = "1.18.0", features=["derive"]}
nalgebra-glm = "0.19.0"

